force-app/main/default/objects/Info_QR__c/Info_QR__c.object-meta.xml
<CustomObject>
    <label>Info QR</label>
    <nameField>
        <label>Actividad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Info QR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>