force-app/main/default/objects/Info_QR__c/fields/Fecha_fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin__c</fullName>
    <label>Fecha fin</label>
    <required>true</required>
    <type>Date</type>
</CustomField>