force-app/main/default/objects/Info_QR__c/fields/Fecha_inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_inicio__c</fullName>
    <label>Fecha inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>