force-app/main/default/objects/Info_QR__c/fields/Socio__c.field-meta.xml
<CustomField>
    <fullName>Socio__c</fullName>
    <label>Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Info QR</relationshipLabel>
    <relationshipName>Info_QR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>